objects/AMC_Case__c.object
<CustomObject>
    <label>AMC Case</label>
    <nameField>
        <label>AMC Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMC Case</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>AMC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AMC__c.Status__c</field>
                <operation>equals</operation>
                <value>Live</value>
            </filterItems>
            <filterItems>
                <field>AMC__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AMC__c</referenceTo>
        <relationshipLabel>AMC Case</relationshipLabel>
        <relationshipName>AMC_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <formula>AMC__r.AMC_Plan__r.Visits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMC Case (Account)</relationshipLabel>
        <relationshipName>AMC_Case1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_1__c</fullName>
        <label>Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customers1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMC Case</relationshipLabel>
        <relationshipName>AMC_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Left__c</fullName>
        <formula>Planned_Maintenance_Hours__c - Utilized_Maintenance_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Hours Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User didn’t attend training</fullName>
                </value>
                <value>
                    <fullName>Complex Functionality</fullName>
                </value>
                <value>
                    <fullName>Existing Problem</fullName>
                </value>
                <value>
                    <fullName>Instructions Not Clear</fullName>
                </value>
                <value>
                    <fullName>New Problem</fullName>
                </value>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Case__c</fullName>
        <label>Type of Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue (Bug)</fullName>
                </value>
                <value>
                    <fullName>Release / Patch</fullName>
                </value>
                <value>
                    <fullName>Re-installation</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date &amp; Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMC_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMC Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_of_Case__c</fullName>
        <label>Status of Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Awaiting technical expertise</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not an Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date &amp; Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Planned__c</fullName>
        <label>Support Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Training__c</fullName>
        <label>Training Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Utilized__c</fullName>
        <label>Support Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Planned__c</fullName>
        <label>Training Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Utilized__c</fullName>
        <label>Training Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilized_Training__c</fullName>
        <label>Training Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Hours_Left__c</fullName>
        <formula>Support_Planned__c  -  Support_Utilized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Hours Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Left_Tranning__c</fullName>
        <formula>Planned_Training__c  - Utilized_Training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Hours Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_in_Hours__c</fullName>
        <label>Time Spent in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Hours_Left__c</fullName>
        <formula>Training_Planned__c  -  Training_Utilized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Hours Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Planned__c</fullName>
        <label>Installation Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Utilized__c</fullName>
        <label>Installation Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Utilized1__c</fullName>
        <formula>AMC__r.Installations__c - Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Maintenance_Hours__c</fullName>
        <label>Support Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Turn_Around_time_TAT__c</fullName>
        <formula>TEXT(
FLOOR(End_Date_Time__c- Start_Date_Time__c)
) &amp; &quot; Day(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Date_Time__c- Start_Date_Time__c)*24,24),0)
) &amp;&quot; Hour(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Date_Time__c- Start_Date_Time__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Turn Around time (TAT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilized_Maintenance_Hours__c</fullName>
        <label>Support Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>